# cfw

./: .amlignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
azureml/config/: workspace.env.template
azureml/environments/: conda_dinov2_azure.yml  conda_vitrans_azure.yml  env_dinov2_azureml.yaml  env_vitrans_azureml.yaml
azureml/jobs/: derive_binary_multi_node.yaml  derive_binary_single_node.yaml  eval_dataloader.yaml  evaluate_from_training_artifacts.yaml  extract_features.yaml  ray_bohb_distributed.yaml  sweep_train.yaml  train_cfw_ddp_2nodes.yaml  train_cfw_single_gpu.yaml  train_ddp_2nodes.yaml  train_single_gpu.yaml
azureml/pipelines/: data_pipeline.yaml  experiment_pipeline.yaml  features_pipeline.yaml  hpo_pipeline.yaml
configs/: config.yaml
configs/augmentation/: heavy_aug.yaml  no_aug.yaml  standard_aug.yaml
configs/dataloader/: baseline.yaml  cfw.yaml
configs/dataset/: driveact_binary.yaml  driveact_multiclass.yaml  statefarm_binary.yaml  statefarm_multiclass.yaml
configs/experiment/: baseline_dinov2_binary.yaml  baseline_dinov2_binary_smoke.yaml  baseline_dinov2_binary_split0.yaml  baseline_dinov2_binary_split1.yaml  baseline_dinov2_binary_split2.yaml  baseline_vit_multiclass.yaml  cfw_dinov2_binary.yaml  cfw_dinov2_binary_smoke.yaml  cfw_dinov2_binary_split0.yaml  cfw_dinov2_binary_split1.yaml  cfw_dinov2_binary_split2.yaml  cfw_vit_multiclass.yaml  statefarm_multiclass_smoke_cfw_dinov2_vitb14.yaml  statefarm_multiclass_smoke_extract_dinov2_vitb14.yaml  statefarm_multiclass_smoke_extract_vit_h_14.yaml
configs/grid_search/: README.md  baseline_dinov2_binary_lr_sweep.yaml  baseline_dinov2_multiclass_lr_sweep.yaml  baseline_vit_binary_lr_sweep.yaml  baseline_vit_multiclass_lr_sweep.yaml  cfw_dinov2_multiclass_lr_sweep.yaml
configs/hardware/: default.yaml
configs/ingestion/: binary_conversion.yaml  daa_extraction.yaml  daa_extraction_smoke.yaml  download.yaml  eda.yaml  pipeline.yaml  statefarm_splits.yaml  statefarm_splits_smoke.yaml
configs/model/: custom_model.yaml  dinov2_vitb14.yaml  dinov2_vitl14.yaml  dinov2_vits14.yaml  resnet50.yaml  vit_b_16.yaml  vit_h_14.yaml  vit_l_16.yaml
configs/optimization/: bayesian.yaml  bayesian_distributed.yaml  bayesian_linearinterp_smoke.yaml  bayesian_smoke.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/runtime/: azureml.yaml  local.yaml
configs/scheduler/: cosine_annealing.yaml  cosine_annealing_warm_restarts.yaml  (+3 more)
envs/: environment_dinov2.yml  environment_vitrans.yml
scripts/: bayesian_optimize.py  eval_dataloader.py  extract_features.py  generate_cfw_weights_table.py  test.py  train.py
src/: __init__.py
(+81 files in other folders)
